<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#636363"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:fontFamily="monospace"
        android:text="@string/label1" />

    <TableLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:background="#636363">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/a"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/a" />

            <Button
                android:id="@+id/b"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/b" />

            <Button
                android:id="@+id/c"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/c" />

            <Button
                android:id="@+id/d"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/d" />

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/e"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/e" />

            <Button
                android:id="@+id/f"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/f" />

            <Button
                android:id="@+id/g"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/g" />

            <Button
                android:id="@+id/h"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/h" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/i"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/i" />

            <Button
                android:id="@+id/j"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/j" />

            <Button
                android:id="@+id/k"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/k" />

            <Button
                android:id="@+id/l"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/l" />

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/m"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/m" />

            <Button
                android:id="@+id/n"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/n" />

            <Button
                android:id="@+id/o"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/o" />

            <Button
                android:id="@+id/p"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/p" />

        </TableRow>
    </TableLayout>
</RelativeLayout>